# kafka-protocol

./: Cargo.toml  \  api_keys.txt  build.rs  docker-compose.yml  kafka_errors.txt  kafka_request_responses.json
src/: api_key.rs  client.rs  consumer.rs  error.rs  lib.rs  parser.rs  producer.rs
src/parser/: add_offsets_to_txn_request.rs  add_offsets_to_txn_response.rs  add_partitions_to_txn_request.rs  add_partitions_to_txn_response.rs  alter_configs_request.rs  alter_configs_response.rs  alter_replica_log_dirs_request.rs  alter_replica_log_dirs_response.rs  api_versions_request.rs  api_versions_response.rs  controlled_shutdown_request.rs  controlled_shutdown_response.rs  create_acls_request.rs  create_acls_response.rs  create_delegation_token_request.rs  create_delegation_token_response.rs  create_partitions_request.rs  create_partitions_response.rs  create_topics_request.rs  create_topics_response.rs  delete_acls_request.rs  delete_acls_response.rs  delete_groups_request.rs  delete_groups_response.rs  delete_records_request.rs  delete_records_response.rs  delete_topics_request.rs  delete_topics_response.rs  describe_acls_request.rs  describe_acls_response.rs  describe_configs_request.rs  describe_configs_response.rs  describe_delegation_token_request.rs  describe_delegation_token_response.rs  describe_groups_request.rs  describe_groups_response.rs  describe_log_dirs_request.rs  describe_log_dirs_response.rs  elect_preferred_leaders_request.rs  elect_preferred_leaders_response.rs  (+56 more)
