[package]
name = "kafka-protocol"
version = "0.1.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2018"

[dependencies]
combine = "4.0.0-beta.1"
bytes = "0.5"

[build-dependencies]
combine = "4.0.0-beta.1"
Inflector = "0.11"
itertools = "0.8"
pretty = "0.7"
serde_json = "1"

[features]
regenerate = []
