[package]
name = "kafka-protocol"
version = "0.1.0"
authors = ["Markus Westerlind <marwes91@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
combine = "4.0.0-beta.2"
crc = "1"
flate2 = "1"
integer-encoding = "1"
log = "0.4"
tokio = { version = "0.2", features = ["tcp", "io-util",  "macros"] }
quick-error = "1"

[build-dependencies]
combine = "4.0.0-beta.1"
Inflector = "0.11"
itertools = "0.8"
pretty = "0.7"
serde_json = "1"

[dev-dependencies]
env_logger = "0.7"
tokio = { version = "0.2", features = ["dns", "macros", "rt-threaded"] }

[features]
regenerate = []
